# nba-games-prediction2

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-airflow.txt  requirements.txt
.dvc/: config
.viz/: kedro_pipeline_events.json  stats.json
airflow/dags/: nba_classification_dag.py  nba_complete_pipeline_dag.py  nba_ml_pipeline.py  nba_regression_dag.py
conf/base/: catalog.yml  parameters.yml
data/01_raw/: .gitignore  games.csv.dvc  games_details.csv.dvc  teams.csv.dvc
data/02_intermediate/: games_cleaned.parquet  games_validated.parquet  teams_cleaned.parquet
data/03_primary/: game_level_features.parquet  games_teams_details.parquet  team_features_base.parquet
data/04_feature/: regression_data.parquet
data/05_model_input/: classification_data.parquet  regression_data.parquet  validation_report.json
data/05_model_input/eda_plots.png/: correlation_matrix  points_distribution  win_pct_by_season
data/06_models/away_weakness_model.pkl/2025-10-27T02.54.54.091Z/: away_weakness_model.pkl
data/08_reporting/model_report.json/2025-10-27T13.57.10.770Z/: model_report.json
notebooks/models/: 01_Business_understandig.ipynb  02_data_understanding0.ipynb  03_data_preparation.ipynb  Modelos de regresion.ipynb  Modelos_de_clasificacion.ipynb
scripts/: setup_dvc.py  track_data.py
src/nba_games_prediction/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/nba_games_prediction/pipelines/: __init__.py
web_app/: app.py  requirements.txt
(+20 files in other folders)
